@@ -16,6 +16,7 @@ Released: not released yet
 - fixed bug in append_line if last line of text does not end with newline char
 - conf now provides all correct methods to work like Python built-in dict type
 - render_template now use conf/local_conf variables as context default values
+- add fabfile file name and fabfile line number to error messages if possible
 
 Version 0.1
 -----------
